--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -14,37 +14,43 @@
 -fx-prefWidth: 250px;
 -fx-text-fill: white;
 -fx-font-weight: 600;
-
+-fx-box-shadow: 10px 5px 5px black;
 }
-.button:hover
+#title-of-ex
 {
--fx-background-color: #117F98;
+-fx-font-weight: 700;
+}
+#label-input
+{
+-fx-font-weight: 700;
+-fx-font-size: 15px;
+}
+#label-info
+{
+-fx-font-weight: 500;
+-fx-font-size: 14px;
+}
+#title-of-text
+{
+-fx-text-fill:#F58220;
+}
+#title-label
+{
+-fx-font-weight: 800;
+-fx-font-size: 13px;
 }
 .label
 {
--fx-text-fill: transparent;
+-fx-font-weight: 600;
+-fx-text-fill: #008E97;
 }
-#button7
+.button:hover
 {
 -fx-background-color: #F58220;
+-fx-box-shadow: 10px 5px 5px black;
 }
-#button2
+#button_small
 {
--fx-background-color: #F58220;
-}
-#button8
-{
--fx-background-color: #F58220;
-}
-#button7:hover
-{
--fx-background-color: #F69331;
-}
-#button2:hover
-{
--fx-background-color: #F69331;
-}
-#button8:hover
-{
--fx-background-color: #F69331;
+-fx-font-size: 11px;
+-fx-font-weight: 600;
 }
