--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -21,15 +21,12 @@
          <left>
             <AnchorPane fx:id="button" prefHeight="466.0" prefWidth="812.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="exercise1Button" layoutX="52.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Pierwsze" />
-                  <Button fx:id="exercise7Button" layoutX="52.0" layoutY="308.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Siódme" />
-                  <Button fx:id="exercise8Button" layoutX="598.0" layoutY="308.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Ósme" />
-                  <Button fx:id="exercise6Button" layoutX="598.0" layoutY="185.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Szóste" />
-                  <Button fx:id="exercise2Button" layoutX="325.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Drugie" />
-                  <Button fx:id="exercise5Button" layoutX="325.0" layoutY="185.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Piąte" />
-                  <Button fx:id="exercise4Button" layoutX="52.0" layoutY="185.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Czwarte" />
-                  <Button fx:id="exercise3Button" layoutX="598.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Trzecie" />
-                  <Label alignment="TOP_LEFT" layoutX="52.0" layoutY="86.0" prefHeight="85.0" prefWidth="164.0" text="Implementacja podstawowych &#10;modułów kryptograficznych:&#10;&gt;Rail fence&#10;&gt;Przestawienia macierzowe&#10;" />
+                  <Button fx:id="exercise1Button" layoutX="113.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Pierwsze" />
+                  <Button fx:id="exercise2Button" layoutX="113.0" layoutY="264.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Drugie" />
+                  <Button fx:id="exercise4Button" layoutX="566.0" layoutY="264.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Czwarte" />
+                  <Button fx:id="exercise3Button" layoutX="566.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zadanie Trzecie" />
+                  <Label alignment="TOP_LEFT" layoutX="108.0" layoutY="91.0" prefHeight="85.0" prefWidth="164.0" text="Implementacja podstawowych &#10;modułów kryptograficznych:&#10;&gt;Rail fence&#10;&gt;Przestawienia macierzowe&#10;" />
+                  <Button fx:id="exitButton" layoutX="345.0" layoutY="400.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Wyjście" />
                </children>
             </AnchorPane>
          </left></BorderPane>
