--- a/src/main/resources/views/exMatrixShiftB.fxml
+++ b/src/main/resources/views/exMatrixShiftB.fxml
@@ -33,16 +33,20 @@
                             <font>
                                 <Font size="21.0" />
                             </font></Label>
-                        <Label id="label-input" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="181.0" prefHeight="28.0" prefWidth="439.0" text="Klucz:" />
+                        <Label id="label-input" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="307.0" layoutY="209.0" prefHeight="28.0" prefWidth="439.0" text="Klucz:" />
                         <Label id="label-input" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="310.0" layoutY="66.0" prefHeight="28.0" prefWidth="436.0" text="Dane do zaszyfrowania/odszyfrowania:" />
-                        <Label id="label-input" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="383.0" prefHeight="28.0" prefWidth="438.0" text="Wynik:" />
+                        <Label id="label-input" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="374.0" prefHeight="28.0" prefWidth="438.0" text="Wynik:" />
                         <TextField fx:id="dataInputTextField" layoutX="307.0" layoutY="92.0" prefHeight="33.0" prefWidth="440.0" />
-                        <TextField fx:id="keyInputTextField" layoutX="307.0" layoutY="206.0" prefHeight="33.0" prefWidth="440.0" />
-                        <TextField fx:id="outputTextField" editable="false" layoutX="298.0" layoutY="410.0" prefHeight="33.0" prefWidth="440.0" />
-                        <Button fx:id="encryptButton" layoutX="329.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zaszyfruj" />
-                        <Button fx:id="decryptButton" layoutX="569.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Odszyfruj" />
-                        <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="307.0" layoutY="240.0" prefHeight="66.0" prefWidth="439.0" text="                                     Przykład klucza: KLUCZ&#10;Klucz może się składać maksymalnie z tylu liter ile zawierają dane" />
+                        <TextField fx:id="keyInputTextField" layoutX="308.0" layoutY="237.0" prefHeight="33.0" prefWidth="440.0" />
+                        <TextField fx:id="outputTextField" editable="false" layoutX="300.0" layoutY="402.0" prefHeight="33.0" prefWidth="440.0" />
+                        <Button fx:id="encryptButton" layoutX="329.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zaszyfruj" />
+                        <Button fx:id="decryptButton" layoutX="571.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Odszyfruj" />
+                        <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="307.0" layoutY="277.0" prefHeight="40.0" prefWidth="439.0" text="                              Przykład klucza: 3142&#10;Klucz może mieć maksymalnie tyle cyfr ile liter mają dane." />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="126.0" prefHeight="27.0" prefWidth="437.0" text="Przykłady danych: slowo, to moja wiadomosc" />
+                        <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="316.0" layoutY="486.0" prefHeight="27.0" prefWidth="437.0" />
+                        <Button fx:id="pickFileButton" layoutX="427.0" layoutY="153.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="208.0" text="Odczytaj dane z pliku" />
+                        <Button fx:id="saveToFileButton" layoutX="430.0" layoutY="462.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="180.0" text="Zapisz dane do pliku" />
+
                     </children>
                 </AnchorPane>
             </left></BorderPane>
