--- a/src/main/resources/views/ex1RailFence.fxml
+++ b/src/main/resources/views/ex1RailFence.fxml
@@ -39,13 +39,13 @@
                         <TextField fx:id="dataInputTextField" layoutX="307.0" layoutY="92.0" prefHeight="33.0" prefWidth="440.0" />
                         <TextField fx:id="keyInputTextField" layoutX="308.0" layoutY="237.0" prefHeight="33.0" prefWidth="440.0" />
                         <TextField fx:id="outputTextField" editable="false" layoutX="300.0" layoutY="402.0" prefHeight="33.0" prefWidth="440.0" />
-                        <Button fx:id="encryptButton" layoutX="329.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Zaszyfruj" />
-                        <Button fx:id="decryptButton" layoutX="571.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Odszyfruj" />
+                        <Button fx:id="encryptButton" layoutX="329.0" layoutY="331.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="35.0" prefWidth="153.0" text="Zaszyfruj" />
+                        <Button fx:id="decryptButton" layoutX="571.0" layoutY="331.0" mnemonicParsing="false" onAction="#decrypt" prefHeight="35.0" prefWidth="153.0" text="Odszyfruj" />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="307.0" layoutY="277.0" prefHeight="40.0" prefWidth="439.0" text="                              Przykład klucza: 3142&#10;Klucz może mieć maksymalnie tyle cyfr ile liter mają dane." />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="126.0" prefHeight="27.0" prefWidth="437.0" text="Przykłady danych: slowo, to moja wiadomosc" />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="316.0" layoutY="486.0" prefHeight="27.0" prefWidth="437.0" />
-                        <Button fx:id="pickFileButton" layoutX="427.0" layoutY="153.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="208.0" text="Odczytaj dane z pliku" />
-                        <Button fx:id="saveToFileButton" layoutX="430.0" layoutY="462.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="180.0" text="Zapisz dane do pliku" />
+                        <Button fx:id="pickFileButton" layoutX="427.0" layoutY="153.0" mnemonicParsing="false" onAction="#pickFileButtonOnAction" prefHeight="35.0" prefWidth="208.0" text="Odczytaj dane z pliku" />
+                        <Button fx:id="saveToFileButton" layoutX="430.0" layoutY="462.0" mnemonicParsing="false" onAction="#saveFileButton" prefHeight="34.0" prefWidth="180.0" text="Zapisz dane do pliku" />
                     </children>
                 </AnchorPane>
             </left></BorderPane>
