--- a/src/main/resources/views/ex2MatrixShiftC.fxml
+++ b/src/main/resources/views/ex2MatrixShiftC.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Ex2MatrixCController">
     <children>
         <BorderPane prefHeight="625.0" prefWidth="1025.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -24,7 +24,7 @@
             <left>
                 <AnchorPane fx:id="button" prefHeight="466.0" prefWidth="812.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button id="button_small" fx:id="matrixShift3Button" layoutX="38.0" layoutY="66.0" mnemonicParsing="false" onAction="#matrixShift3ButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Przestawienia Macierzowe C" />
+                        <Button id="button_small" fx:id="matrixShift3Button" layoutX="38.0" layoutY="66.0" mnemonicParsing="false"  prefHeight="35.0" prefWidth="153.0" text="Przestawienia Macierzowe C" />
                         <Button fx:id="ceasarCipherButton" layoutX="38.0" layoutY="133.0" mnemonicParsing="false" onAction="#ceasarCipherButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Szyfr Cezara" />
                         <Button id="button_small" fx:id="vigenereEncryptionButton" layoutX="38.0" layoutY="205.0" mnemonicParsing="false" onAction="#vigenereEncryptionButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Szyfrowanie Vigenere'a" />
                         <Button fx:id="menuButton" layoutX="38.0" layoutY="444.0" mnemonicParsing="false" onAction="#menuButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Menu" />
