--- a/src/main/resources/views/ex2VigenereEncryption.fxml
+++ b/src/main/resources/views/ex2VigenereEncryption.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Ex2VigenereController">
     <children>
         <BorderPane prefHeight="625.0" prefWidth="1025.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -26,7 +26,7 @@
                     <children>
                         <Button id="button_small" fx:id="matrixShift3Button" layoutX="38.0" layoutY="66.0" mnemonicParsing="false" onAction="#matrixShift3ButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Przestawienia Macierzowe C" />
                         <Button fx:id="ceasarCipherButton" layoutX="38.0" layoutY="133.0" mnemonicParsing="false" onAction="#ceasarCipherButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Szyfr Cezara" />
-                        <Button id="button_small" fx:id="vigenereEncryptionButton" layoutX="38.0" layoutY="205.0" mnemonicParsing="false" onAction="#vigenereEncryptionButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Szyfrowanie Vigenere'a" />
+                        <Button id="button_small" fx:id="vigenereEncryptionButton" layoutX="38.0" layoutY="205.0" mnemonicParsing="false"  prefHeight="35.0" prefWidth="153.0" text="Szyfrowanie Vigenere'a" />
                         <Button fx:id="menuButton" layoutX="38.0" layoutY="444.0" mnemonicParsing="false" onAction="#menuButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Menu" />
                         <Line endX="-38.19999694824219" endY="398.20001220703125" fill="#f58220" layoutX="255.0" layoutY="119.0" startX="-38.19999694824219" startY="-119.0" stroke="#008e97" />
                         <Label id="title-of-ex" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="219.0" layoutY="14.0" prefHeight="31.0" prefWidth="652.0" text="Zadanie Drugie: Szyfrowanie Vignere'a">
