--- a/src/main/resources/views/ex3LFSR.fxml
+++ b/src/main/resources/views/ex3LFSR.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Ex3LFSRController">
     <children>
         <BorderPane prefHeight="625.0" prefWidth="1025.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -24,7 +24,7 @@
          <center>
                 <AnchorPane fx:id="button" prefHeight="466.0" prefWidth="812.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button fx:id="lfsrButton" layoutX="38.0" layoutY="66.0" mnemonicParsing="false" onAction="#lfsrButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Generator Klucza" />
+                        <Button fx:id="lfsrButton" layoutX="38.0" layoutY="66.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="153.0" text="Generator Klucza" />
                         <Button id="button_small" fx:id="streamCipherButton" layoutX="38.0" layoutY="133.0" mnemonicParsing="false" onAction="#streamCipherButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Strumieniowe Szyfrowanie" />
                         <Button fx:id="menuButton" layoutX="38.0" layoutY="444.0" mnemonicParsing="false" onAction="#menuButtonOnAction" prefHeight="35.0" prefWidth="153.0" text="Menu" />
                         <Line endX="-38.19999694824219" endY="398.20001220703125" fill="#f58220" layoutX="255.0" layoutY="119.0" startX="-38.19999694824219" startY="-119.0" stroke="#008e97" />
@@ -38,9 +38,9 @@
                         <TextField fx:id="generetedKeyTextField" editable="false" layoutX="311.0" layoutY="259.0" prefHeight="184.0" prefWidth="440.0" />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="114.0" prefHeight="66.0" prefWidth="438.0" text="Wielomian powinien zostać zapisany w takiej postaci: 1+x^3+x^5,&#10;czyli od najmniejszej potęgi x, do największej. &#10;Wartości stojące przy x powinny być równe 0 lub 1." textAlignment="CENTER" />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="316.0" layoutY="486.0" prefHeight="27.0" prefWidth="437.0" />
-                        <Button fx:id="startButton" layoutX="474.0" layoutY="187.0" mnemonicParsing="false" onAction="#startButtonOnAction" prefHeight="35.0" prefWidth="114.0" text="Start" />
+                        <Button fx:id="startButton" layoutX="474.0" layoutY="187.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="114.0" text="Start" />
                         <Button fx:id="saveToFileButton" layoutX="598.0" layoutY="448.0" mnemonicParsing="false" onAction="#saveFileButton" prefHeight="34.0" prefWidth="180.0" text="Zapisz dane do pliku" />
-                  <Button fx:id="stopButton" layoutX="470.0" layoutY="448.0" mnemonicParsing="false" onAction="#stopButtonOnAction" prefHeight="35.0" prefWidth="114.0" text="Stop" />
+                  <Button fx:id="stopButton" layoutX="470.0" layoutY="448.0" mnemonicParsing="false"  prefHeight="35.0" prefWidth="114.0" text="Stop" />
                   <Button id="button_small" fx:id="streamDecipherButton" layoutX="38.0" layoutY="195.0" mnemonicParsing="false" onAction="#streamDecipherButtonOnAction" prefHeight="35.0" prefWidth="156.0" text="Strumieniowe Deszyfrowanie" />
                   <Button fx:id="pickFileButton" layoutX="279.0" layoutY="187.0" mnemonicParsing="false" onAction="#pickFileButtonOnAction" prefHeight="34.0" prefWidth="180.0" text="Odczytaj dane z pliku" />
 
