--- a/src/main/resources/views/ex3StreamDecoding.fxml
+++ b/src/main/resources/views/ex3StreamDecoding.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="640.0" prefWidth="875.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Ex3StreamDecodingController">
     <children>
         <BorderPane prefHeight="625.0" prefWidth="1025.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -42,7 +42,7 @@
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="217.0" layoutY="277.0" prefHeight="40.0" prefWidth="609.0" text="     Proszę podać kod binarny klucza, który był wykorzystany do zakodowania hasła." />
                         <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="316.0" layoutY="486.0" prefHeight="27.0" prefWidth="437.0" />
                         <Button fx:id="pickFileButton" layoutX="431.0" layoutY="159.0" mnemonicParsing="false" onAction="#pickFileButtonOnAction" prefHeight="35.0" prefWidth="208.0" text="Odczytaj dane z pliku" />
-                        <Button id="button_small" fx:id="streamDecipherButton" layoutX="38.0" layoutY="195.0" mnemonicParsing="false" onAction="#streamDecipherButtonOnAction" prefHeight="35.0" prefWidth="156.0" text="Strumieniowe Deszyfrowanie" />
+                        <Button id="button_small" fx:id="streamDecipherButton" layoutX="38.0" layoutY="195.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="156.0" text="Strumieniowe Deszyfrowanie" />
                         <Button fx:id="saveToFileButton" layoutX="438.0" layoutY="462.0" mnemonicParsing="false" onAction="#saveFileButton" prefHeight="34.0" prefWidth="180.0" text="Zapisz dane do pliku" />
                   <Label id="label-info" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="230.0" layoutY="131.0" prefHeight="40.0" prefWidth="609.0" text="Proszę podać kod binarny zakodowanego hasła." />
 
